kurs_3/sem_2/mtran/lb/3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> <empty>
Rule 2     block -> LBRACKET body RBRACKET
Rule 3     body -> expression
Rule 4     body -> function_declaration
Rule 5     expression -> declaration_with_assignment expression
Rule 6     expression -> declaration_with_assignment
Rule 7     expression -> if expression
Rule 8     expression -> else
Rule 9     expression -> function_body
Rule 10    expression -> function_implementation SEMICOLON
Rule 11    expression -> function_implementation SEMICOLON expression
Rule 12    expression -> arithmetic_expression
Rule 13    expression -> while expression
Rule 14    expression -> while
Rule 15    expression -> console_function
Rule 16    expression -> console_function expression
Rule 17    declaration_with_assignment -> VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
Rule 18    declaration_with_assignment -> VAR ID ASSIGNMENT_OPERATOR function_declaration
Rule 19    arithmetic_expression -> ID MATH_OPERATOR arithmetic_expression
Rule 20    arithmetic_expression -> ID MATH_OPERATOR SEMICOLON
Rule 21    arithmetic_expression -> NUMBER MATH_OPERATOR arithmetic_expression
Rule 22    arithmetic_expression -> arithmetic_expression MATH_OPERATOR arithmetic_expression
Rule 23    arithmetic_expression -> NUMBER
Rule 24    arithmetic_expression -> ID
Rule 25    arithmetic_expression -> STRING
Rule 26    function_declaration -> FUNCTION LPAREN parameters RPAREN LBRACKET function_body RBRACKET
Rule 27    function_body -> expression
Rule 28    function_body -> RETURN expression SEMICOLON
Rule 29    function_implementation -> ID LPAREN function_parameters RPAREN
Rule 30    function_implementation -> function_implementation MATH_OPERATOR expression
Rule 31    function_parameters -> <empty>
Rule 32    function_parameters -> function_parameters COMMA function_parameters
Rule 33    function_parameters -> arithmetic_expression
Rule 34    parameters -> <empty>
Rule 35    parameters -> parameters COMMA parameters
Rule 36    parameters -> arithmetic_expression
Rule 37    console_function -> METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON
Rule 38    predicate -> ID LOGICAL_OPERATOR arithmetic_expression
Rule 39    predicate -> ID LOGICAL_OPERATOR ID
Rule 40    predicate -> predicate LOGICAL_OPERATOR predicate
Rule 41    while -> WHILE LPAREN predicate RPAREN block
Rule 42    if -> IF LPAREN predicate RPAREN block
Rule 43    else -> ELSE block

Terminals, with rules where they appear

ASSIGNMENT_OPERATOR  : 17 18
COMMA                : 32 35
ELSE                 : 43
FUNCTION             : 26
ID                   : 17 18 19 20 24 29 38 39 39
IF                   : 42
LBRACKET             : 2 26
LOGICAL_OPERATOR     : 38 39 40
LPAREN               : 26 29 37 41 42
MATH_OPERATOR        : 19 20 21 22 30
METHOD_OF_CLASS_CONSOLE : 37
NUMBER               : 21 23
RBRACKET             : 2 26
RETURN               : 28
RPAREN               : 26 29 37 41 42
SEMICOLON            : 10 11 17 20 28 37
STRING               : 25
VAR                  : 17 18
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

arithmetic_expression : 12 17 19 21 22 22 33 36 38
block                : 41 42 43 0
body                 : 2
console_function     : 15 16
declaration_with_assignment : 5 6
else                 : 8
expression           : 3 5 7 11 13 16 27 28 30 37
function_body        : 9 26
function_declaration : 4 18
function_implementation : 10 11 30
function_parameters  : 29 32 32
if                   : 7
parameters           : 26 35 35
predicate            : 40 40 41 42
while                : 13 14

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> .
    (2) block -> . LBRACKET body RBRACKET

    $end            reduce using rule 1 (block -> .)
    LBRACKET        shift and go to state 2

    block                          shift and go to state 1

state 1

    (0) S' -> block .



state 2

    (2) block -> LBRACKET . body RBRACKET
    (3) body -> . expression
    (4) body -> . function_declaration
    (5) expression -> . declaration_with_assignment expression
    (6) expression -> . declaration_with_assignment
    (7) expression -> . if expression
    (8) expression -> . else
    (9) expression -> . function_body
    (10) expression -> . function_implementation SEMICOLON
    (11) expression -> . function_implementation SEMICOLON expression
    (12) expression -> . arithmetic_expression
    (13) expression -> . while expression
    (14) expression -> . while
    (15) expression -> . console_function
    (16) expression -> . console_function expression
    (26) function_declaration -> . FUNCTION LPAREN parameters RPAREN LBRACKET function_body RBRACKET
    (17) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR function_declaration
    (42) if -> . IF LPAREN predicate RPAREN block
    (43) else -> . ELSE block
    (27) function_body -> . expression
    (28) function_body -> . RETURN expression SEMICOLON
    (29) function_implementation -> . ID LPAREN function_parameters RPAREN
    (30) function_implementation -> . function_implementation MATH_OPERATOR expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING
    (41) while -> . WHILE LPAREN predicate RPAREN block
    (37) console_function -> . METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON

    FUNCTION        shift and go to state 6
    VAR             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    RETURN          shift and go to state 5
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3
    WHILE           shift and go to state 17
    METHOD_OF_CLASS_CONSOLE shift and go to state 19

    function_declaration           shift and go to state 11
    console_function               shift and go to state 13
    function_body                  shift and go to state 4
    while                          shift and go to state 15
    declaration_with_assignment    shift and go to state 16
    arithmetic_expression          shift and go to state 18
    function_implementation        shift and go to state 7
    if                             shift and go to state 21
    else                           shift and go to state 22
    body                           shift and go to state 23
    expression                     shift and go to state 20

state 3

    (25) arithmetic_expression -> STRING .

    MATH_OPERATOR   reduce using rule 25 (arithmetic_expression -> STRING .)
    RBRACKET        reduce using rule 25 (arithmetic_expression -> STRING .)
    SEMICOLON       reduce using rule 25 (arithmetic_expression -> STRING .)
    RPAREN          reduce using rule 25 (arithmetic_expression -> STRING .)
    COMMA           reduce using rule 25 (arithmetic_expression -> STRING .)
    LOGICAL_OPERATOR reduce using rule 25 (arithmetic_expression -> STRING .)


state 4

    (9) expression -> function_body .

    SEMICOLON       reduce using rule 9 (expression -> function_body .)
    MATH_OPERATOR   reduce using rule 9 (expression -> function_body .)
    RBRACKET        reduce using rule 9 (expression -> function_body .)
    RPAREN          reduce using rule 9 (expression -> function_body .)


state 5

    (28) function_body -> RETURN . expression SEMICOLON
    (5) expression -> . declaration_with_assignment expression
    (6) expression -> . declaration_with_assignment
    (7) expression -> . if expression
    (8) expression -> . else
    (9) expression -> . function_body
    (10) expression -> . function_implementation SEMICOLON
    (11) expression -> . function_implementation SEMICOLON expression
    (12) expression -> . arithmetic_expression
    (13) expression -> . while expression
    (14) expression -> . while
    (15) expression -> . console_function
    (16) expression -> . console_function expression
    (17) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR function_declaration
    (42) if -> . IF LPAREN predicate RPAREN block
    (43) else -> . ELSE block
    (27) function_body -> . expression
    (28) function_body -> . RETURN expression SEMICOLON
    (29) function_implementation -> . ID LPAREN function_parameters RPAREN
    (30) function_implementation -> . function_implementation MATH_OPERATOR expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING
    (41) while -> . WHILE LPAREN predicate RPAREN block
    (37) console_function -> . METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON

    VAR             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    RETURN          shift and go to state 5
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3
    WHILE           shift and go to state 17
    METHOD_OF_CLASS_CONSOLE shift and go to state 19

    console_function               shift and go to state 13
    function_body                  shift and go to state 4
    while                          shift and go to state 15
    function_implementation        shift and go to state 7
    arithmetic_expression          shift and go to state 18
    declaration_with_assignment    shift and go to state 16
    if                             shift and go to state 21
    else                           shift and go to state 22
    expression                     shift and go to state 24

state 6

    (26) function_declaration -> FUNCTION . LPAREN parameters RPAREN LBRACKET function_body RBRACKET

    LPAREN          shift and go to state 25


state 7

    (10) expression -> function_implementation . SEMICOLON
    (11) expression -> function_implementation . SEMICOLON expression
    (30) function_implementation -> function_implementation . MATH_OPERATOR expression

    SEMICOLON       shift and go to state 27
    MATH_OPERATOR   shift and go to state 26


state 8

    (17) declaration_with_assignment -> VAR . ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> VAR . ID ASSIGNMENT_OPERATOR function_declaration

    ID              shift and go to state 28


state 9

    (42) if -> IF . LPAREN predicate RPAREN block

    LPAREN          shift and go to state 29


state 10

    (43) else -> ELSE . block
    (1) block -> .
    (2) block -> . LBRACKET body RBRACKET

    RBRACKET        reduce using rule 1 (block -> .)
    SEMICOLON       reduce using rule 1 (block -> .)
    MATH_OPERATOR   reduce using rule 1 (block -> .)
    RPAREN          reduce using rule 1 (block -> .)
    LBRACKET        shift and go to state 2

    block                          shift and go to state 30

state 11

    (4) body -> function_declaration .

    RBRACKET        reduce using rule 4 (body -> function_declaration .)


state 12

    (29) function_implementation -> ID . LPAREN function_parameters RPAREN
    (19) arithmetic_expression -> ID . MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> ID . MATH_OPERATOR SEMICOLON
    (24) arithmetic_expression -> ID .

  ! shift/reduce conflict for MATH_OPERATOR resolved as shift
    LPAREN          shift and go to state 31
    MATH_OPERATOR   shift and go to state 32
    RBRACKET        reduce using rule 24 (arithmetic_expression -> ID .)
    SEMICOLON       reduce using rule 24 (arithmetic_expression -> ID .)
    RPAREN          reduce using rule 24 (arithmetic_expression -> ID .)

  ! MATH_OPERATOR   [ reduce using rule 24 (arithmetic_expression -> ID .) ]


state 13

    (15) expression -> console_function .
    (16) expression -> console_function . expression
    (5) expression -> . declaration_with_assignment expression
    (6) expression -> . declaration_with_assignment
    (7) expression -> . if expression
    (8) expression -> . else
    (9) expression -> . function_body
    (10) expression -> . function_implementation SEMICOLON
    (11) expression -> . function_implementation SEMICOLON expression
    (12) expression -> . arithmetic_expression
    (13) expression -> . while expression
    (14) expression -> . while
    (15) expression -> . console_function
    (16) expression -> . console_function expression
    (17) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR function_declaration
    (42) if -> . IF LPAREN predicate RPAREN block
    (43) else -> . ELSE block
    (27) function_body -> . expression
    (28) function_body -> . RETURN expression SEMICOLON
    (29) function_implementation -> . ID LPAREN function_parameters RPAREN
    (30) function_implementation -> . function_implementation MATH_OPERATOR expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING
    (41) while -> . WHILE LPAREN predicate RPAREN block
    (37) console_function -> . METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON

    SEMICOLON       reduce using rule 15 (expression -> console_function .)
    MATH_OPERATOR   reduce using rule 15 (expression -> console_function .)
    RBRACKET        reduce using rule 15 (expression -> console_function .)
    RPAREN          reduce using rule 15 (expression -> console_function .)
    VAR             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    RETURN          shift and go to state 5
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3
    WHILE           shift and go to state 17
    METHOD_OF_CLASS_CONSOLE shift and go to state 19

    console_function               shift and go to state 13
    function_body                  shift and go to state 4
    while                          shift and go to state 15
    function_implementation        shift and go to state 7
    arithmetic_expression          shift and go to state 18
    declaration_with_assignment    shift and go to state 16
    if                             shift and go to state 21
    else                           shift and go to state 22
    expression                     shift and go to state 33

state 14

    (21) arithmetic_expression -> NUMBER . MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> NUMBER .

  ! shift/reduce conflict for MATH_OPERATOR resolved as shift
    MATH_OPERATOR   shift and go to state 34
    RBRACKET        reduce using rule 23 (arithmetic_expression -> NUMBER .)
    SEMICOLON       reduce using rule 23 (arithmetic_expression -> NUMBER .)
    RPAREN          reduce using rule 23 (arithmetic_expression -> NUMBER .)
    COMMA           reduce using rule 23 (arithmetic_expression -> NUMBER .)
    LOGICAL_OPERATOR reduce using rule 23 (arithmetic_expression -> NUMBER .)

  ! MATH_OPERATOR   [ reduce using rule 23 (arithmetic_expression -> NUMBER .) ]


state 15

    (13) expression -> while . expression
    (14) expression -> while .
    (5) expression -> . declaration_with_assignment expression
    (6) expression -> . declaration_with_assignment
    (7) expression -> . if expression
    (8) expression -> . else
    (9) expression -> . function_body
    (10) expression -> . function_implementation SEMICOLON
    (11) expression -> . function_implementation SEMICOLON expression
    (12) expression -> . arithmetic_expression
    (13) expression -> . while expression
    (14) expression -> . while
    (15) expression -> . console_function
    (16) expression -> . console_function expression
    (17) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR function_declaration
    (42) if -> . IF LPAREN predicate RPAREN block
    (43) else -> . ELSE block
    (27) function_body -> . expression
    (28) function_body -> . RETURN expression SEMICOLON
    (29) function_implementation -> . ID LPAREN function_parameters RPAREN
    (30) function_implementation -> . function_implementation MATH_OPERATOR expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING
    (41) while -> . WHILE LPAREN predicate RPAREN block
    (37) console_function -> . METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON

    SEMICOLON       reduce using rule 14 (expression -> while .)
    MATH_OPERATOR   reduce using rule 14 (expression -> while .)
    RBRACKET        reduce using rule 14 (expression -> while .)
    RPAREN          reduce using rule 14 (expression -> while .)
    VAR             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    RETURN          shift and go to state 5
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3
    WHILE           shift and go to state 17
    METHOD_OF_CLASS_CONSOLE shift and go to state 19

    console_function               shift and go to state 13
    while                          shift and go to state 15
    function_body                  shift and go to state 4
    function_implementation        shift and go to state 7
    arithmetic_expression          shift and go to state 18
    declaration_with_assignment    shift and go to state 16
    if                             shift and go to state 21
    else                           shift and go to state 22
    expression                     shift and go to state 35

state 16

    (5) expression -> declaration_with_assignment . expression
    (6) expression -> declaration_with_assignment .
    (5) expression -> . declaration_with_assignment expression
    (6) expression -> . declaration_with_assignment
    (7) expression -> . if expression
    (8) expression -> . else
    (9) expression -> . function_body
    (10) expression -> . function_implementation SEMICOLON
    (11) expression -> . function_implementation SEMICOLON expression
    (12) expression -> . arithmetic_expression
    (13) expression -> . while expression
    (14) expression -> . while
    (15) expression -> . console_function
    (16) expression -> . console_function expression
    (17) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR function_declaration
    (42) if -> . IF LPAREN predicate RPAREN block
    (43) else -> . ELSE block
    (27) function_body -> . expression
    (28) function_body -> . RETURN expression SEMICOLON
    (29) function_implementation -> . ID LPAREN function_parameters RPAREN
    (30) function_implementation -> . function_implementation MATH_OPERATOR expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING
    (41) while -> . WHILE LPAREN predicate RPAREN block
    (37) console_function -> . METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON

    SEMICOLON       reduce using rule 6 (expression -> declaration_with_assignment .)
    MATH_OPERATOR   reduce using rule 6 (expression -> declaration_with_assignment .)
    RBRACKET        reduce using rule 6 (expression -> declaration_with_assignment .)
    RPAREN          reduce using rule 6 (expression -> declaration_with_assignment .)
    VAR             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    RETURN          shift and go to state 5
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3
    WHILE           shift and go to state 17
    METHOD_OF_CLASS_CONSOLE shift and go to state 19

    console_function               shift and go to state 13
    function_body                  shift and go to state 4
    while                          shift and go to state 15
    function_implementation        shift and go to state 7
    arithmetic_expression          shift and go to state 18
    declaration_with_assignment    shift and go to state 16
    if                             shift and go to state 21
    else                           shift and go to state 22
    expression                     shift and go to state 36

state 17

    (41) while -> WHILE . LPAREN predicate RPAREN block

    LPAREN          shift and go to state 37


state 18

    (12) expression -> arithmetic_expression .
    (22) arithmetic_expression -> arithmetic_expression . MATH_OPERATOR arithmetic_expression

  ! shift/reduce conflict for MATH_OPERATOR resolved as shift
    SEMICOLON       reduce using rule 12 (expression -> arithmetic_expression .)
    RBRACKET        reduce using rule 12 (expression -> arithmetic_expression .)
    RPAREN          reduce using rule 12 (expression -> arithmetic_expression .)
    MATH_OPERATOR   shift and go to state 38

  ! MATH_OPERATOR   [ reduce using rule 12 (expression -> arithmetic_expression .) ]


state 19

    (37) console_function -> METHOD_OF_CLASS_CONSOLE . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 39


state 20

    (3) body -> expression .
    (27) function_body -> expression .

  ! reduce/reduce conflict for RBRACKET resolved using rule 3 (body -> expression .)
    RBRACKET        reduce using rule 3 (body -> expression .)

  ! RBRACKET        [ reduce using rule 27 (function_body -> expression .) ]


state 21

    (7) expression -> if . expression
    (5) expression -> . declaration_with_assignment expression
    (6) expression -> . declaration_with_assignment
    (7) expression -> . if expression
    (8) expression -> . else
    (9) expression -> . function_body
    (10) expression -> . function_implementation SEMICOLON
    (11) expression -> . function_implementation SEMICOLON expression
    (12) expression -> . arithmetic_expression
    (13) expression -> . while expression
    (14) expression -> . while
    (15) expression -> . console_function
    (16) expression -> . console_function expression
    (17) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR function_declaration
    (42) if -> . IF LPAREN predicate RPAREN block
    (43) else -> . ELSE block
    (27) function_body -> . expression
    (28) function_body -> . RETURN expression SEMICOLON
    (29) function_implementation -> . ID LPAREN function_parameters RPAREN
    (30) function_implementation -> . function_implementation MATH_OPERATOR expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING
    (41) while -> . WHILE LPAREN predicate RPAREN block
    (37) console_function -> . METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON

    VAR             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    RETURN          shift and go to state 5
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3
    WHILE           shift and go to state 17
    METHOD_OF_CLASS_CONSOLE shift and go to state 19

    console_function               shift and go to state 13
    function_body                  shift and go to state 4
    while                          shift and go to state 15
    function_implementation        shift and go to state 7
    arithmetic_expression          shift and go to state 18
    declaration_with_assignment    shift and go to state 16
    if                             shift and go to state 21
    else                           shift and go to state 22
    expression                     shift and go to state 40

state 22

    (8) expression -> else .

    SEMICOLON       reduce using rule 8 (expression -> else .)
    MATH_OPERATOR   reduce using rule 8 (expression -> else .)
    RBRACKET        reduce using rule 8 (expression -> else .)
    RPAREN          reduce using rule 8 (expression -> else .)


state 23

    (2) block -> LBRACKET body . RBRACKET

    RBRACKET        shift and go to state 41


state 24

    (28) function_body -> RETURN expression . SEMICOLON
    (27) function_body -> expression .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 42

  ! SEMICOLON       [ reduce using rule 27 (function_body -> expression .) ]


state 25

    (26) function_declaration -> FUNCTION LPAREN . parameters RPAREN LBRACKET function_body RBRACKET
    (34) parameters -> .
    (35) parameters -> . parameters COMMA parameters
    (36) parameters -> . arithmetic_expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING

    RPAREN          reduce using rule 34 (parameters -> .)
    COMMA           reduce using rule 34 (parameters -> .)
    ID              shift and go to state 43
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3

    parameters                     shift and go to state 44
    arithmetic_expression          shift and go to state 45

state 26

    (30) function_implementation -> function_implementation MATH_OPERATOR . expression
    (5) expression -> . declaration_with_assignment expression
    (6) expression -> . declaration_with_assignment
    (7) expression -> . if expression
    (8) expression -> . else
    (9) expression -> . function_body
    (10) expression -> . function_implementation SEMICOLON
    (11) expression -> . function_implementation SEMICOLON expression
    (12) expression -> . arithmetic_expression
    (13) expression -> . while expression
    (14) expression -> . while
    (15) expression -> . console_function
    (16) expression -> . console_function expression
    (17) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR arithmetic_expression SEMICOLON
    (18) declaration_with_assignment -> . VAR ID ASSIGNMENT_OPERATOR function_declaration
    (42) if -> . IF LPAREN predicate RPAREN block
    (43) else -> . ELSE block
    (27) function_body -> . expression
    (28) function_body -> . RETURN expression SEMICOLON
    (29) function_implementation -> . ID LPAREN function_parameters RPAREN
    (30) function_implementation -> . function_implementation MATH_OPERATOR expression
    (19) arithmetic_expression -> . ID MATH_OPERATOR arithmetic_expression
    (20) arithmetic_expression -> . ID MATH_OPERATOR SEMICOLON
    (21) arithmetic_expression -> . NUMBER MATH_OPERATOR arithmetic_expression
    (22) arithmetic_expression -> . arithmetic_expression MATH_OPERATOR arithmetic_expression
    (23) arithmetic_expression -> . NUMBER
    (24) arithmetic_expression -> . ID
    (25) arithmetic_expression -> . STRING
    (41) while -> . WHILE LPAREN predicate RPAREN block
    (37) console_function -> . METHOD_OF_CLASS_CONSOLE LPAREN expression RPAREN SEMICOLON

    VAR             shift and go to state 8
    IF              shift and go to state 9
    ELSE            shift and go to state 10
    RETURN          shift and go to state 5
    ID              shift and go to state 12
    NUMBER          shift and go to state 14
    STRING          shift and go to state 3
    WHILE           shift and go to state 17
    METHOD_OF_CLASS_CONSOLE shift and go to state 19
